# api-sports-io-nfl

./: .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/workflows/: build-publish.yml  test.yml
api_sports_io_nfl/: __init__.py  api.py  exceptions.py
tests/: test_api.py
